# ovc

./: Cargo.toml  README.md
solidity/:  remappings.txt
solidity/src/: FilteredReceiptProof.sol  Prover.sol  ReceiptProof.sol  ReceiptProver.sol  Referee.sol  UniswapV2.sol  Verifier.sol  VerkleTree.sol
solidity/src/interface/: IOVC.sol  IProofSystem.sol  IProver.sol  IReferee.sol
solidity/src/lib/: MerkleTreeLib.sol  PatriciaTrie.sol  Receipt.sol
solidity/src/utils/: Pairing. sol  Pairing.sol
solidity/test/: OVC.t.sol
src/: lib.rs
src/filtered_event_proof/: mod.rs  uniswap_v2.rs
src/receipts_proof/: mod.rs
src/tests/: mod.rs
