[package]
name = "ovc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.10" }

[dev-dependencies]
ark-std = "0.4.0"
