[package]
name = "ovc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["merkle_tree"] }
ark-ec = "0.4.2"
ark-serialize = "0.4.2"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v0.1.0-alpha.4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v0.1.0-alpha.4" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", tag = "v0.1.0-alpha.4" }
ark-ff = "0.4.2"
cita_trie = {git = "https://github.com/severiano-sisneros/cita_trie.git"}
hasher = "0.1.4"
serde = "1.0.188"
revm-primitives = "=1.1.2"


[dev-dependencies]
ark-std = "0.4.0"
serde_json = "1.0.107"